--- a/default.css
+++ b/default.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300&display=swap');
+
 * {
   box-sizing: border-box;
+  font-family: 'Fira Sans', sans-serif;
 }
